# legacy

./: .gitmodules  CMakeLists.txt
libs/libquasarsdk/: CMakeLists.txt
src/c++/network/move_to_new_project/: boardstatus.c++  boardstatus.h
